--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,5 +4,5 @@ linter:
   rules:
     implicit-cast: true
 analyzer:
-  # errors:
-  #   argument_type_not_assignable: ignore
+  errors:
+    argument_type_not_assignable: ignore
